--- a/styles/globals.css
+++ b/styles/globals.css
@@ -24,47 +24,39 @@ a {
   overflow: visible;
 }
 
-css-u0soqy-MuiPickerStaticWrapper-root {
-  box-shadow: 3px 2px 10px 5px #888888 !important;
-}
-
-.css-hlj6pa-MuiDialogActions-root {
+.MuiDialogActions-root {
   display: none !important;
 }
 
-.css-j88s13-MuiPickersToolbar-root-MuiDatePickerToolbar-root
+.MuiPickersToolbar-root-MuiDatePickerToolbar-root
   .MuiPickersToolbar-penIconButton {
   display: none !important;
 }
 
-.css-j88s13-MuiPickersToolbar-root-MuiDatePickerToolbar-root {
+.MuiPickersToolbar-root-MuiDatePickerToolbar-root {
   padding: 0 !important;
 }
 
-.css-hq2kpw-MuiGrid-root-MuiPickersToolbar-content {
+.MuiGrid-root-MuiPickersToolbar-content {
   justify-content: center !important;
   background-color: orange;
   padding: 1rem;
-}
-
-.css-1hbyad5-MuiTypography-root {
-  display: none !important;
 }
 
 .css-bkrceb-MuiButtonBase-root-MuiPickersDay-root.Mui-selected {
   background-color: orange !important;
 }
 
-.css-195y93z-MuiButtonBase-root-MuiPickersDay-root.Mui-selected {
+.MuiPickersDay-root.Mui-selected {
   background-color: orange !important;
   color: black !important;
 }
-.css-195y93z-MuiButtonBase-root-MuiPickersDay-root:not(.Mui-selected) {
+.MuiPickersDay-today:not(.Mui-selected) {
   border-color: transparent !important;
   color: orange;
 }
 
-.css-144dnr3-MuiBadge-badge {
+.MuiBadge-badge {
   color: green;
 }
 
